<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/options_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/options_protocol"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/options_protocol_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/options_hint" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options_url"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/options_server_address_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/options_hint" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/options_port"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/options_port_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/options_hint" />

        <Button
            android:id="@+id/options_save_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/options_save" />

        <TextView
            android:id="@+id/options_bluetooth_connection_device_textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/options_bluetooth_connection_device"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/options_bluetooth_connection_device_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/options_hint" />

        <Button
            android:id="@+id/options_bluetooth_connection_device_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/options_bluetooth_connection_device_button" />

        <TextView
            android:id="@+id/options_bluetooth_text_to_send_textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/options_bluetooth_text_to_send"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/options_bluetooth_text_to_send_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/options_hint" />

        <Button
            android:id="@+id/options_bluetooth_text_to_send_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/options_bluetooth_text_to_send_button" />

        <TextView
            android:id="@+id/options_bluetooth_text_received_textView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/options_bluetooth_text_received"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/options_bluetooth_text_received_editText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/options_hint"
            android:ems="10" />

    </LinearLayout>
