<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

        <TextView
            android:id="@+id/sales_ticket_title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sales_ticket_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/sales_ticket_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/sales_ticket_email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/sales_ticket_email_hint"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/sales_ticket_send_ticket_to_email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sales_ticket_send_ticket_to_email_button" />

    <Button
        android:id="@+id/sales_ticket_print_ticket_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sales_ticket_print_ticket_button" />

    <Button
        android:id="@+id/sales_ticket_no_printing_and_exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sales_ticket_no_printing_and_exit_button" />

</LinearLayout>
