<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/stock_qr_generator_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/stock_qr_generator_product_code"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/stock_qr_generator_imageView"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_gravity="center"
        android:layout_weight="0.04"
        android:contentDescription="@string/stock_qr_generator_imageView_text"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/stock_qr_generator_button1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stock_qr_generator_print_button" />

    <Button
        android:id="@+id/stock_qr_generator_button2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stock_qr_generator_exit_button" />

</LinearLayout>
